# breos

./: .gitattributes  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
breos/: __init__.py  acc.py  acc_sizer.py  app.py  app_config.py  app_inputs.py  app_results.py  app_simulation.py  battery.py  cec_fit.py  cli.py  constants.py  economics.py  emissions.py  inverter.py  io.py  load_profiles.py  montecarlo.py  numba_kernels.py  optimization.py  plotting.py  polysun_degradation.py  pv_modules.py  resources.py  solar.py  utils.py  weather.py
breos/data/: __init__.py
breos/data/configs/: __init__.py  financials.json
breos/data/rlp/: __init__.py  h0SLP_demandlib_1000kwh_15min.csv  h0SLP_demandlib_1000kwh_hourly.csv
breos/degradation/: __init__.py  engine.py  profiles.py  protocol.py  results.py  validation.py
breos/degradation/blast/: VENDORED.md  __init__.py  degradation_model.py  functions.py  rainflow.py
breos/degradation/blast/models/: __init__.py  _available_models.py  lfp_gr_250AhPrismatic_2019.py  lfp_gr_SonyMurata3Ah_2018.py  lmo_gr_NissanLeaf66Ah_2ndLife_2020.py  nca_gr_Panasonic3Ah_2018.py  nca_grsi_SonyMurata2p5Ah_2023.py  nmc111_gr_Kokam75Ah_2017.py  nmc111_gr_Sanyo2Ah_2014.py  nmc622_gr_DENSO50Ah_2021.py  nmc811_grSi_LGM50_5Ah_2021.py  nmc811_grSi_LGMJ1_4Ah_2020.py  nmc_gr_50Ah_B1_2020.py  nmc_gr_50Ah_B2_2020.py  nmc_gr_75Ah_A_2019.py  nmc_lto_10Ah_2020.py
breos/runners/: __init__.py  app.py
configs/: README.md  costs.json  emissions.json  financials.json  locations.json
configs/base/: costs.json  electricity.json  emissions.json  locations.json
configs/examples/: east-west-roof.toml  external-rlp.toml  germany-berlin.toml  montecarlo.toml  pv-only.toml  pv-plus-battery.toml  quickstart.toml  sweep.toml
dev/: compare_polysun_pvbat.py  normalize_rlp.py  run_full_validation.py  sensitivity_calendar_aging.py  test_all_panels.py
docs/: conf.py  index.md  release.md  resources.md
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  index.doctree
docs/_build/html/.doctrees/__intersphinx_cache__/: pvlib_objects.inv
docs/_build/html/.doctrees/adr/: 0001-docs-architecture.doctree  index.doctree
docs/_build/html/.doctrees/api/: index.doctree
docs/_build/html/.doctrees/architecture/: third-party-wrapping.doctree
docs/_build/html/.doctrees/getting-started/: configuration.doctree  index.doctree  installation.doctree  interpreting-results.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/breos/: battery.html  economics.html  emissions.html  (+10 more)
docs/_build/html/adr/: 0001-docs-architecture.html  index.html
docs/_build/html/api/: appendix.html  battery.html  cost-analysis.html  energy-balance.html  index.html  load-profiles.html  optimization.html  plotting.html  pv.html  weather.html
docs/_build/html/architecture/: third-party-wrapping.html
docs/_build/html/getting-started/: configuration.html  index.html  installation.html  interpreting-results.html  quickstart.html
docs/_static/: switcher.json
docs/adr/: 0001-docs-architecture.md  index.md
docs/api/: battery.md  cost-analysis.md  degradation-models.md  energy-balance.md  index.md  load-profiles.md  optimization.md  plotting.md  pv.md  weather.md
docs/architecture/: 0.4x-refactor-plan.md  battery-degradation-policy.md  battery-degradation-strategy.md  blast-degradation-engine.md  string-inverter-sizing.md  third-party-wrapping.md
docs/getting-started/: configuration.md  index.md  inputs.md  installation.md  interpreting-results.md  options.md  quickstart.md  recipes.md  troubleshooting.md
docs/legal/: load-profile-data.md
rlp/: EREDES_2025_BTN_1000kwh_hourly.csv  LoadProfileGenerator_family_3kids.csv  README.md  REE_2026_2.0TD_1000kwh_15min.csv  REE_2026_2.0TD_1000kwh_hourly.csv  bdew_h0_2025_15min.csv  family_profile_SynPro.csv
tests/: conftest.py  test_app.py  test_app_validation_correctness.py  test_battery.py  test_battery_profiles.py  test_blast_endurance.py  test_blast_engine.py  test_blast_integration.py  test_blast_multicondition_parity.py  test_blast_parity_tooling.py  test_blast_vendoring.py  test_cec_fit.py  test_cli.py  test_cli_correctness.py  test_degradation_protocol.py  test_degradation_results.py  test_degradation_validation.py  test_docs_options.py  test_economics.py  test_emissions.py  test_golden_outputs.py  test_inverter.py  test_load_profiles.py  test_montecarlo.py  test_montecarlo_plotting.py  test_numba_kernels.py  test_optimization.py  test_optimization_parity.py  test_optimization_public.py  test_plotting.py  test_public_api.py  test_pv_modules.py  test_release_smoke.py  test_runners.py  test_solar.py  test_utils.py  test_validation_drift.py  test_weather.py
tests/fixtures/blast/: blast_golden_soh_100d.json  blast_parity_multicondition.json  blast_parity_multicondition.manifest.json  synthetic_field_year.json
tools/: add_location.py  analyze_results.py  azislope_optimizer.py  azitilt_optimizer.py  batch_compare_locations.py  compare_degradation_porto.py  compare_degradation_scenarios.py  compare_results.py  compare_two_results.py  compare_weather_sources.py  fetch_historical_weather.py  fetch_weather.py  generate_blast_parity_fixture.py  generate_option_docs.py  generate_synthetic_field_year.py  recalculate_economics.py  validate_cec_fit.py  validate_degradation.py  verify_release_artifacts.py
validation/: README.md  REPORT.md  common.py  compare.py  fetch_references.py  locations.json  run_breos.py
validation/baselines/: breos_baseline.json
validation/data/references/: berlin.json  golden_colorado.json  melbourne.json  nairobi.json  new_delhi.json  porto.json  sao_paulo.json
weather/: .gitignore
(+4 files in other folders)
