[project]
name = "breos"
version = "0.1.0"
description = "Building Renewable Energy Optimization Software - A Python library for PV and battery energy system simulations"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
authors = [
    {name = "Leonardo Rodrigues", email = "lrodrigues@fe.up.pt"},
]
keywords = ["photovoltaic", "battery", "energy", "simulation", "optimization", "solar", "degradation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "geopy>=2.4.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "openpyxl>=3.1.0",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "pyarrow>=19.0.0",
    "pvlib==0.14.0",
    "pymoo>=0.6.1.6",
    "rainflow>=3.2.0",
    "requests-cache>=1.2.1",
    "timezonefinder>=8.2.1",
]

[project.urls]
Homepage = "https://github.com/Str4vinci/BREOS"
Repository = "https://github.com/Str4vinci/BREOS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
