[project]
name = "breos"
version = "0.4.0"
description = "Python library for PV and battery energy-system simulation and optimization"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    {name = "Leonardo Rodrigues", email = "lrodrigues@fe.up.pt"},
]
keywords = ["photovoltaic", "battery", "energy", "simulation", "optimization", "solar", "degradation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.3.3",
    "pvlib>=0.14.0,<0.16",
    "rainflow>=3.2.0",
    "scipy>=1.14",
]

[project.urls]
Homepage = "https://github.com/Str4vinci/breos"
Documentation = "https://breos.readthedocs.io/"
Repository = "https://github.com/Str4vinci/breos"
Issues = "https://github.com/Str4vinci/breos/issues"
Changelog = "https://github.com/Str4vinci/breos/blob/main/CHANGELOG.md"

[project.scripts]
breos = "breos.cli:main"

[project.optional-dependencies]
fast = ["numba>=0.63.1"]
plots = ["matplotlib>=3.10.8"]
optimization = ["pymoo>=0.6.1.6"]
weather = [
    "openmeteo-requests>=1.7.4",
    "requests-cache>=1.2.1",
    "timezonefinder>=8.2.1",
]
validation = [
    "openpyxl>=3.1.0",
    "pyarrow>=19.0.0",
]
location-tools = [
    "geopy>=2.4.1",
    "timezonefinder>=8.2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "openpyxl>=3.1.0",
    "openmeteo-requests>=1.7.4",
    "pyarrow>=19.0.0",
    "pymoo>=0.6.1.6",
    "requests-cache>=1.2.1",
    "timezonefinder>=8.2.1",
]
docs = [
    "sphinx>=8.1",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=4.0",
    "sphinx-design>=0.6",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Slow endurance/multi-year tests are deselected by default so the normal suite
# stays fast. Run them explicitly with `pytest -m slow` (the scheduled CI job
# and the release verification both do this); `-m slow` on the command line
# overrides this default marker expression.
addopts = ["-m", "not slow"]
markers = [
    "slow: long-running endurance and multi-year integration tests; deselected by default, run with -m slow",
]

[tool.coverage.run]
branch = true
source = ["breos"]
omit = ["breos/degradation/blast/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "F401",   # unused import — __init__.py re-exports intentionally
    "E741",   # ambiguous variable name — common in scientific code (l, I, O)
]

[tool.ruff.lint.per-file-ignores]
"breos/__init__.py" = ["F401", "F811"]   # re-exports and shadowed imports
"tests/*" = ["F811"]                      # pytest fixtures
"tools/*" = ["E402"]                      # CLI scripts insert PROJECT_ROOT before imports
"breos/degradation/blast/**/*.py" = ["E401", "F841", "I001", "W291", "W292", "W293"]  # vendored BLAST-Lite source

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
